--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,10 @@ on:
 jobs:
 
   build:
+    permissions:
+      id-token: write
+      contents: read
+
     name: Build image
     runs-on: ubuntu-latest
 
@@ -15,7 +19,7 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: arn:aws:iam::123456789012:role/my-github-actions-role
+        role-to-assume: arn:aws:iam::999855308786:role/gh-actions-role
         aws-region: sa-east-1
 
     - name: Login to Amazon ECR
@@ -25,7 +29,7 @@ jobs:
     - name: Build, tag, and push docker image to Amazon ECR
       env:
         REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        REPOSITORY: my-ecr-repo
+        REPOSITORY: simplebank
         IMAGE_TAG: ${{ github.sha }}
       run: |
         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
