Adding logs for github token

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,11 @@ jobs:
         role-to-assume: arn:aws:iam::999855308786:role/gh-actions-role
         aws-region: sa-east-1
 
+    - name: Inspect OIDC token
+      run: |
+        echo ${{ github.token }} | jq .  # This will print the token details in the logs
+        echo "Inspecting OIDC Token"
+
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
