Adjusting docker config

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,12 +4,13 @@ on:
   push:
     branches: [ "main" ]
 
-permissions:
-  id-token: write
-
 jobs:
 
   build:
+    permissions:
+      id-token: write
+      contents: read
+
     name: Build image
     runs-on: ubuntu-latest
 
