--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       - POSTGRES_DB=simple_bank
   api:
     build:
-      context: .
-      dockerfile: ./simplebank/Dockerfile
+      context: simplebank/
+      dockerfile: simplebank/Dockerfile
     ports:
      - "8080:8080"
     environment:
