--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,7 @@ services:
       - POSTGRES_DB=simple_bank
   api:
     build:
-      context: .
-      push: true
+      dockerfile: Dockerfile
     ports:
      - "8080:8080"
     environment:
