--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,5 +32,5 @@ jobs:
         REPOSITORY: simplebank
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+        docker build -t 999855308786.dkr.ecr.sa-east-1.amazonaws.com/simplebank:${{ github.sha }} .
+        docker push 999855308786.dkr.ecr.sa-east-1.amazonaws.com/simplebank:${{ github.sha }}
