--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - POSTGRES_DB=simple_bank
   api:
     build:
+      context: .
       dockerfile: Dockerfile
     ports:
      - "8080:8080"
